--- a/config/crds/workload.kcp.dev_synctargets.yaml
+++ b/config/crds/workload.kcp.dev_synctargets.yaml
@@ -81,6 +81,7 @@ spec:
                 default:
                 - workspace:
                     exportName: kubernetes
+                    path: root:compute
                 description: SupportedAPIExports defines a set of APIExports supposed
                   to be supported by this SyncTarget. The SyncTarget will be selected
                   to deploy the workload only when the resource schema on the SyncTarget
